ingress/whoami-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami
spec:
  selector:
    matchLabels:
      tag: whoami
  replicas: 3
  template:
    metadata:
      labels:
        tag: whoami
    spec:
      containers:
      - name: jwilder-whoami
        image: jwilder/whoami
        ports:
        - containerPort: 8000
