ingress/whoami-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami-service
spec:
  type: LoadBalancer
  selector:
    tag: whoami
  ports:
  - port: 8000
    targetPort: 8000
